# lrk

./: .gitignore  Cargo.toml
.cargo/: config.toml
crates/blk/: Cargo.toml
crates/blk/src/: args.rs  fields.rs  main.rs
crates/brk/: Cargo.toml
crates/brk_bindgen/: Cargo.toml
crates/brk_bindgen/src/: coin_labels.rs  lib.rs
crates/brk_bindgen/src/generate/: constants.rs
crates/brk_bindgen/src/generators/javascript/: client.rs  mod.rs  tree.rs
crates/brk_bindgen/src/generators/python/: api.rs  client.rs  mod.rs
crates/brk_chain/: Cargo.toml
crates/brk_chain/src/: chain.rs  lib.rs
crates/brk_cli/: Cargo.toml  README.md
crates/brk_cli/src/: config.rs  main.rs
crates/brk_client/src/: lib.rs
crates/brk_cohort/src/: by_type.rs
crates/brk_computer/: Cargo.toml
crates/brk_computer/src/: lib.rs
crates/brk_computer/src/cointime/: import.rs
crates/brk_computer/src/cointime/cap/: compute.rs
crates/brk_computer/src/cointime/prices/: import.rs
crates/brk_computer/src/distribution/: vecs.rs
crates/brk_computer/src/distribution/cohorts/addr/: groups.rs  vecs.rs
crates/brk_computer/src/distribution/cohorts/utxo/: groups.rs
crates/brk_computer/src/distribution/compute/: block_loop.rs  mod.rs
crates/brk_computer/src/distribution/metrics/: config.rs
crates/brk_computer/src/distribution/metrics/realized/: full.rs
crates/brk_computer/src/indicators/: compute.rs
crates/brk_computer/src/inputs/by_type/: compute.rs
crates/brk_computer/src/internal/: block_walker.rs
crates/brk_computer/src/internal/per_block/ratio/: percentiles.rs  price_extended.rs
crates/brk_computer/src/investing/: compute.rs
crates/brk_computer/src/outputs/: compute.rs
crates/brk_computer/src/outputs/by_type/: compute.rs
crates/brk_computer/src/outputs/unspent/: compute.rs
crates/brk_computer/src/pools/: mod.rs
crates/brk_computer/src/price/: compute.rs
crates/brk_computer/src/prices/: compute.rs
crates/brk_error/: Cargo.toml
crates/brk_error/src/: lib.rs
crates/brk_fetcher/: Cargo.toml
crates/brk_fetcher/src/: binance.rs  bitfinex.rs  coinbase.rs  kraken.rs  lib.rs
crates/brk_indexer/: Cargo.toml
crates/brk_indexer/src/: constants.rs  lengths.rs  lib.rs  readers.rs
crates/brk_indexer/src/processor/: metadata.rs  mod.rs  sigops.rs  tx.rs  types.rs
crates/brk_mempool/: Cargo.toml
crates/brk_mempool/src/: test_support.rs
crates/brk_mempool/src/snapshot/: builder.rs  mod.rs
crates/brk_mempool/src/steps/fetcher/: fetched.rs
crates/brk_mempool/src/steps/preparer/: mod.rs  tx_addition.rs
crates/brk_mempool/src/stores/: tx_store.rs
crates/brk_mempool/src/stores/addr_tracker/: mod.rs
crates/brk_query/: Cargo.toml
crates/brk_query/src/impl/: addr.rs  oracle.rs  price.rs  tx.rs
crates/brk_query/src/impl/block/: info.rs  txs.rs
crates/brk_query/src/impl/mining/: difficulty.rs  pools.rs
crates/brk_reader/: Cargo.toml
crates/brk_reader/src/: bisect.rs  parse.rs  scan.rs
crates/brk_reader/src/pipeline/: forward.rs
crates/brk_rpc/: Cargo.toml
crates/brk_rpc/src/: lib.rs  methods.rs
crates/brk_server/: Cargo.toml
crates/brk_server/examples/: bindgen.rs
crates/brk_server/src/: lib.rs
crates/brk_server/src/api/: addrs.rs  general.rs  mempool.rs  oracle.rs  scalar.html  server.rs
crates/brk_server/src/api/openapi/: mod.rs
crates/brk_types/: Cargo.toml  pools-ltc-v1.json
crates/brk_types/src/: addr.rs  addr_bytes.rs  addr_validation.rs  block.rs  block_header.rs  blockhash.rs  date.rs  day1.rs  day3.rs  disk_usage.rs  epoch.rs  halving.rs  health.rs  height.rs  hour1.rs  hour12.rs  hour4.rs  index.rs  lib.rs  minute10.rs  minute30.rs  output_type.rs  pool_slug.rs  pools.rs  raw_locktime.rs  sats.rs  time_period.rs  timestamp.rs  tx.rs  tx_version.rs  tx_version_raw.rs  txid.rs  txin.rs  txout.rs  week1.rs  weight.rs  witness.rs  year.rs  year1.rs
crates/mmpl/: Cargo.toml
docker/: .env.example  Dockerfile  docker-compose.yml
docs/: README.md
modules/brk-client/: index.js
website/: index.html  llms-full.txt  llms.txt  manifest.webmanifest
website/.well-known/: ai-plugin.json
website/assets/favicon/: site.webmanifest
website/assets/logo/: demo.html
website/scripts/: main.js
website/scripts/explorer/: address.js  block.js  chain.js  mempool.js  render.js  tx.js
website/scripts/options/: cointime.js  investing.js  market.js  mining.js  network.js  partial.js
website/scripts/options/distribution/: cost-basis.js  data.js
website/scripts/utils/: client.js  colors.js  units.js
website/scripts/utils/chart/: capture.js  index.js
website/src/explorer/chain/: index.js
website/src/heatmap/: oracle.js  urpd.js
website/styles/: variables.css
website_next/: index.html  llms.txt  manifest.webmanifest  robots.txt  wrangler.toml
website_next/assets/logo/: demo-svg.html
website_next/header/: index.js
website_next/home/: index.js
website_next/learn/: details.js
website_next/learn/charts/: storage.js  units.js
website_next/learn/data/: groups.js
website_next/learn/data/sections/: address-count.js  capitalization.js  introduction.js  mining-pools.js  supply.js  utxo-set.js
website_next/learn/data/sections/capitalization/: market.js  realized.js
website_next/utils/: client.js
website_next/wallets/start/: story.js
website_next/wallets/vault/: storage.js
