[package]
name = "blk"
description = "A CLI to inspect Bitcoin Core blocks"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
litecoin = [
    "brk_chain/litecoin",
    "brk_error/litecoin",
    "brk_reader/litecoin",
    "brk_rpc/litecoin",
    "brk_types/litecoin",
]

[dependencies]
brk_chain = { workspace = true }
brk_error = { workspace = true }
brk_reader = { workspace = true }
brk_rpc = { workspace = true }
brk_types = { workspace = true }
owo-colors = { workspace = true, features = ["supports-colors"] }
serde_json = { workspace = true }

[[bin]]
name = "blk"
path = "src/main.rs"
