[package]
name = "brk_bindgen"
description = "A trait-based generator of client bindings for multiple languages"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
litecoin = ["brk_chain/litecoin", "brk_query/litecoin", "brk_types/litecoin"]

[dependencies]
brk_chain = { workspace = true }
brk_cohort = { workspace = true }
brk_query = { workspace = true }
brk_types = { workspace = true }
indexmap = { workspace = true }
oas3 = "0.22"
serde = { workspace = true }
serde_json = { workspace = true }
