[package]
name = "brk_fetcher"
description = "A Bitcoin price fetcher"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude = ["examples/"]

[features]
litecoin = ["brk_chain/litecoin", "brk_error/litecoin", "brk_types/litecoin"]

[dependencies]
brk_chain = { workspace = true }
brk_error = { workspace = true, features = ["ureq", "serde_json"] }
brk_logger = { workspace = true }
brk_types = { workspace = true }
tracing = { workspace = true }
ureq = { workspace = true }
serde_json = { workspace = true }
