[package]
name = "brk_mempool"
description = "Bitcoin mempool monitor with fee estimation"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude = ["examples/"]

[features]
litecoin = [
    "brk_chain/litecoin",
    "brk_error/litecoin",
    "brk_rpc/litecoin",
    "brk_types/litecoin",
]

[dependencies]
brk_chain = { workspace = true }
brk_error = { workspace = true }
brk_oracle = { workspace = true }
brk_rpc = { workspace = true }
brk_types = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
rustc-hash = { workspace = true }
smallvec = { workspace = true }

[dev-dependencies]
brk_logger = { workspace = true }
