[package]
name = "mmpl"
description = "A CLI to stream Bitcoin mempool events as NDJSON"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
litecoin = [
    "brk_error/litecoin",
    "brk_mempool/litecoin",
    "brk_rpc/litecoin",
    "brk_types/litecoin",
]

[dependencies]
brk_error = { workspace = true }
brk_mempool = { workspace = true }
brk_rpc = { workspace = true }
brk_types = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[[bin]]
name = "mmpl"
path = "src/main.rs"
